API Request Fixed

--- a/notebooks/test_connection.ipynb
+++ b/notebooks/test_connection.ipynb
@@ -12,6 +12,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [],
@@ -112,13 +123,12 @@
    "source": [
     "predict_dict = df.to_dict(orient=\"list\")\n",
     "for key in predict_dict.keys():\n",
-    "    predict_dict[key] = predict_dict[key][0]\n",
-    "print(predict_dict)"
+    "    predict_dict[key] = predict_dict[key][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 92,
    "metadata": {
     "scrolled": true
    },
@@ -126,10 +136,10 @@
     {
      "data": {
       "text/plain": [
-       "{'prediction': 'error'}"
+       "{'prediction': 0, 'survived': 0}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,13 +148,6 @@
     "url = 'http://127.0.0.1:8000/predict'\n",
     "r = requests.post(url,json=predict_dict); r.json()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
