Added README and changed to MD

--- a/notebooks/test_connection.ipynb
+++ b/notebooks/test_connection.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "\n",
+    "This notebook is for testing the API calls with a single data point from the training data.\n",
     "\"\"\""
    ]
   },
@@ -121,6 +121,7 @@
     }
    ],
    "source": [
+    "# Format the dataframe into a JSON type file structure\n",
     "predict_dict = df.to_dict(orient=\"list\")\n",
     "for key in predict_dict.keys():\n",
     "    predict_dict[key] = predict_dict[key][0]"
